--- a/g4cx/CMakeLists.txt
+++ b/g4cx/CMakeLists.txt
@@ -1,55 +1,60 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name U4)
-set(desc "Geant4 Low Level Utilities")
+set(name G4CX)
+set(desc "Top Level")
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions NO_POLICY_SCOPE)
 
 #[=[
-U4
-===
+G4CX
+=====
 
+Note : this must remain a franken-package until rework the 
+geometry chain into using a more direct (and shallower) 
+new world approach. 
 
 #]=]
 
-find_package(SysRap REQUIRED CONFIG)
-find_package(G4 REQUIRED MODULE)
-
-find_package(CLHEP  REQUIRED CONFIG) 
+#find_package(SysRap REQUIRED CONFIG)
+#find_package(G4 REQUIRED MODULE)
+#find_package(CLHEP  REQUIRED CONFIG) 
 # Geant4 should have found CLHEP already, but when using Randomize get 
 # undefined symbols CLHEP::HepRandom::getTheEngine()
-find_package(OpticksXercesC REQUIRED MODULE)
 
+
+find_package(U4       REQUIRED CONFIG)
+find_package(ExtG4    REQUIRED CONFIG)
+find_package(CSG_GGeo REQUIRED CONFIG)
+find_package(CSGOptiX REQUIRED CONFIG)
 
 
 set(SOURCES
-    U4_LOG.cc 
-    U4.cc
+    G4CX_LOG.cc 
+
+    G4CXOpticks.cc
 ) 
 
 set(HEADERS
-    U4_LOG.hh
-    U4_API_EXPORT.hh
-    U4.hh
-    U4Track.h
-    U4PhotonInfo.h
-    U4GDML.h
+    G4CX_LOG.hh
+    G4CX_API_EXPORT.hh
+
+    G4CXOpticks.hh
 )
 
 
 add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
 
 target_link_libraries( ${name} PUBLIC
-    Opticks::G4
-    Opticks::SysRap 
-    CLHEP::CLHEP
-    Opticks::OpticksXercesC
+    Opticks::U4
+    Opticks::ExtG4
+    Opticks::CSG_GGeo
+    Opticks::CSGOptiX
 )
 
 target_include_directories( ${name} PUBLIC 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> 
 )
 
-target_compile_definitions( ${name} PUBLIC OPTICKS_U4 )
+target_compile_definitions( ${name} PUBLIC OPTICKS_G4CX )
 target_compile_definitions( ${name} PUBLIC G4USE_STD11 ) 
 
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
