SSim NPFold holder down to which can move low level sim content specific methods using the array content and metadata such as bnd names

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -107,6 +107,7 @@ set(SOURCES
     SGeoConfig.cc
 
     SEvt.cc
+    SSim.cc
 
 ) 
     
@@ -250,6 +251,14 @@ set(HEADERS
 
     SEventConfig.hh
     SGeoConfig.hh
+
+
+
+    NP.hh  
+    NPU.hh 
+    NPFold.h 
+    SSim.hh
+
 )
 
 
@@ -343,9 +352,6 @@ endif()
 
 
 set(WITH_NP YES)
-if(WITH_NP)
-    list(APPEND HEADERS   NP.hh  NPU.hh  )
-endif()
 
 
 CUDA_ADD_LIBRARY( ${name} ${SOURCES} )
