move QProp input array prep down to SProp, prepare to centralize QSim input array management down to SSim for extensibility and avoiding duplication

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -108,6 +108,7 @@ set(SOURCES
 
     SEvt.cc
     SSim.cc
+    SProp.cc
 
 ) 
     
@@ -258,6 +259,7 @@ set(HEADERS
     NPU.hh 
     NPFold.h 
     SSim.hh
+    SProp.hh
 
 )
 
