use SSim centralized input array management to simplify QSim::UploadComponents and make it more extensible plus eliminate duplicated setup code

--- a/g4cx/tests/CMakeLists.txt
+++ b/g4cx/tests/CMakeLists.txt
@@ -4,7 +4,8 @@ project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)   
 
 set(TEST_SOURCES
-   G4CXTest.cc
+   G4CXRenderTest.cc
+   G4CXSimulateTest.cc
 )
 
 
