simtrace starting to work well enough to use to look into cxsim microsteps

--- a/CSG/tests/CMakeLists.txt
+++ b/CSG/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SOURCES
     CSGTargetTest.cc
     CSGTargetGlobalTest.cc
     CSGFoundry_MakeCenterExtentGensteps_Test.cc
+    CSGFoundry_getFrame_Test.cc
 
     CSGScanTest.cc
     CUTest.cc
