implement notes/issues/namelist-based-elv-skip-string.rst for skipping virtual Water///Water PMT wrapper surfaces

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -29,6 +29,7 @@ set(TEST_SOURCES
    SPairVecTest.cc
    SDigestTest.cc
    SDigestNPTest.cc
+
    
    PLogTest.cc 
    PLOG_Test.cc 
@@ -105,6 +106,7 @@ set(TEST_SOURCES
    SEvtTest.cc
    SSimTest.cc
    SPropTest.cc
+   SNameTest.cc
 )
 
 
