U4RecorderTest starting to BeamOn, as dependents like U4Physics and DsG4Scintillation are not reusable they are not appropriate for U4 package and are thus consigned to the tests folder only

--- a/u4/CMakeLists.txt
+++ b/u4/CMakeLists.txt
@@ -61,6 +61,7 @@ target_include_directories( ${name} PUBLIC
 
 target_compile_definitions( ${name} PUBLIC OPTICKS_U4 )
 target_compile_definitions( ${name} PUBLIC G4USE_STD11 ) 
+target_compile_definitions( ${name} PUBLIC STANDALONE ) 
 
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
