--- a/u4/CMakeLists.txt
+++ b/u4/CMakeLists.txt
@@ -66,6 +66,7 @@ target_include_directories( ${name} PUBLIC
 target_compile_definitions( ${name} PUBLIC OPTICKS_U4 )
 target_compile_definitions( ${name} PUBLIC G4USE_STD11 ) 
 target_compile_definitions( ${name} PUBLIC STANDALONE ) 
+target_compile_definitions( ${name} PUBLIC MOCK_CURAND ) 
 
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
