restrict the use of MOCK_CURAND macro in U4 to the one test : U4VPrimaryGeneratorTest as that macro may cause problems when eg using U4 to collect gensteps prior to GPU running

--- a/u4/tests/CMakeLists.txt
+++ b/u4/tests/CMakeLists.txt
@@ -3,13 +3,26 @@ set(name U4Test)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)   
 
+
+#[=[
+Unlike most executables U4VPrimaryGeneratorTest 
+needs the MOCK_CURAND macro in order to use CUDA 
+curand using code on the CPU by mocking the curand
+functions
+#]=]
+
+set(TGT U4VPrimaryGeneratorTest)
+add_executable(${TGT} U4VPrimaryGeneratorTest.cc)
+target_compile_definitions( ${TGT} PRIVATE MOCK_CURAND ) 
+target_link_libraries(${TGT} U4)
+install(TARGETS ${TGT} DESTINATION lib)
+
+
 set(TEST_SOURCES
    U4Test.cc
    U4PhotonInfoTest.cc
    U4GDMLTest.cc
-   U4VPrimaryGeneratorTest.cc
 )
-
 
 foreach(SRC ${TEST_SOURCES})
     get_filename_component(TGT ${SRC} NAME_WE)
